@@ -1,3 +1,8 @@
+2003-09-29  Michael Koch  <konqueror@gmx.de>
+
+	* java/net/InetAddress.java,
+	java/net/URL.java: Reformated.
+
 2003-09-29  Bryce McKinlay  <bryce@mckinlay.net.nz>
 
 	* boehm.cc (_Jv_BuildGCDescr): Put first word of object in most 
